chunk using pandas

--- a/src/Preprocessing/merge_labelled_data.ipynb
+++ b/src/Preprocessing/merge_labelled_data.ipynb
@@ -750,10 +750,7 @@
    ],
    "source": [
     "# get null classes\n",
-    "x = data[data['class'].isnull()]\n",
-    "\n",
-    "with pd.option_context('display.max_colwidth', 200):\n",
-    "    display(x.head())"
+    "x = data[data['class'].isnull()]"
    ]
   },
   {
