--- a/src/EmbeddingModels/preprocess_embeddings.ipynb
+++ b/src/EmbeddingModels/preprocess_embeddings.ipynb
@@ -141,9 +141,22 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "attempted relative import with no known parent package",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mchunking\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m chunk_dataset_and_explode\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# roughly 4 characters per token\u001b[39;00m\n\u001b[0;32m      5\u001b[0m max_len \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2048\u001b[39m\n",
+      "\u001b[1;31mImportError\u001b[0m: attempted relative import with no known parent package"
+     ]
+    }
+   ],
    "source": [
     "from chunking import chunk_dataset_and_explode\n",
+    "\n",
     "\n",
     "# roughly 4 characters per token\n",
     "max_len = 2048\n",
