trying to fix running the pretrained model

--- a/src/FastFit/train_classifier.ipynb
+++ b/src/FastFit/train_classifier.ipynb
@@ -280,7 +280,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "07/23/2024 13:11:26 - WARNING - fastfit.train - Process rank: 0, device: cuda:0, n_gpu: 1distributed training: True, 16-bits training: True\n"
+      "07/23/2024 15:27:31 - WARNING - fastfit.train - Process rank: 0, device: cuda:0, n_gpu: 1distributed training: True, 16-bits training: True\n"
      ]
     },
     {
@@ -294,7 +294,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f192fb44e2eb406386a7554e9c8011ad",
+       "model_id": "16d163f5736849ea8eea6edbc066e6c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -308,7 +308,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7f0023101b642ce9f720c6c5abd9682",
+       "model_id": "1957de03cf8e4a2d95a8f98e70102580",
        "version_major": 2,
        "version_minor": 0
       },
@@ -322,7 +322,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58b3821e624b416d91a5c6dcf319408a",
+       "model_id": "55835a3086184ae7b37f399cb6274073",
        "version_major": 2,
        "version_minor": 0
       },
@@ -336,7 +336,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c635c4da5a2e4143bc01852101b8e414",
+       "model_id": "c1a83346967a4beab92389bc56ef6879",
        "version_major": 2,
        "version_minor": 0
       },
@@ -350,7 +350,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09d36e95f05848538ed07437b7d2a767",
+       "model_id": "a69e949f37d34bcd80445f8a0fe2afd3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -364,7 +364,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "264a2688c8ad47abbb069db916d0ad16",
+       "model_id": "4490d8ad0505431998ae0591fb37ccd3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -378,7 +378,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b524c5426d449819a39b747ffc6e7d4",
+       "model_id": "46468d412cee41a2a041300c241226dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -392,7 +392,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3b3140d548e4c07bf3f872268900ddb",
+       "model_id": "2d24c1ae88634f159cbfa4915cda0d4d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WARNING|modeling_utils.py:1198] 2024-07-23 13:11:55,196 >> Could not estimate the number of tokens of the input, floating-point operations will not be computed\n"
+      "[WARNING|modeling_utils.py:1198] 2024-07-23 15:28:00,927 >> Could not estimate the number of tokens of the input, floating-point operations will not be computed\n"
      ]
     },
     {
@@ -459,7 +459,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='100' max='100' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [100/100 01:02, Epoch 20/20]\n",
+       "      [100/100 01:03, Epoch 20/20]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -476,7 +476,7 @@
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>4.299000</td>\n",
-       "      <td>4.486239</td>\n",
+       "      <td>4.486179</td>\n",
        "      <td>0.971910</td>\n",
        "      <td>0.975000</td>\n",
        "      <td>0.974536</td>\n",
@@ -484,7 +484,7 @@
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>3.960200</td>\n",
-       "      <td>4.249883</td>\n",
+       "      <td>4.249847</td>\n",
        "      <td>0.988372</td>\n",
        "      <td>0.990000</td>\n",
        "      <td>0.989770</td>\n",
@@ -492,7 +492,7 @@
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>3.889800</td>\n",
-       "      <td>4.215590</td>\n",
+       "      <td>4.215579</td>\n",
        "      <td>0.988372</td>\n",
        "      <td>0.990000</td>\n",
        "      <td>0.989770</td>\n",
@@ -500,7 +500,7 @@
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>3.838900</td>\n",
-       "      <td>4.182333</td>\n",
+       "      <td>4.182316</td>\n",
        "      <td>0.982759</td>\n",
        "      <td>0.985000</td>\n",
        "      <td>0.984678</td>\n",
@@ -508,7 +508,7 @@
        "    <tr>\n",
        "      <td>5</td>\n",
        "      <td>3.820600</td>\n",
-       "      <td>4.225021</td>\n",
+       "      <td>4.225079</td>\n",
        "      <td>0.982759</td>\n",
        "      <td>0.985000</td>\n",
        "      <td>0.984678</td>\n",
@@ -516,7 +516,7 @@
        "    <tr>\n",
        "      <td>6</td>\n",
        "      <td>3.814100</td>\n",
-       "      <td>4.203435</td>\n",
+       "      <td>4.203447</td>\n",
        "      <td>0.982759</td>\n",
        "      <td>0.985000</td>\n",
        "      <td>0.984678</td>\n",
@@ -524,7 +524,7 @@
        "    <tr>\n",
        "      <td>7</td>\n",
        "      <td>3.808900</td>\n",
-       "      <td>4.185344</td>\n",
+       "      <td>4.185375</td>\n",
        "      <td>0.982759</td>\n",
        "      <td>0.985000</td>\n",
        "      <td>0.984678</td>\n",
@@ -532,7 +532,7 @@
        "    <tr>\n",
        "      <td>8</td>\n",
        "      <td>3.799500</td>\n",
-       "      <td>4.189375</td>\n",
+       "      <td>4.189353</td>\n",
        "      <td>0.982759</td>\n",
        "      <td>0.985000</td>\n",
        "      <td>0.984678</td>\n",
@@ -540,7 +540,7 @@
        "    <tr>\n",
        "      <td>9</td>\n",
        "      <td>3.797700</td>\n",
-       "      <td>4.207275</td>\n",
+       "      <td>4.207273</td>\n",
        "      <td>0.982759</td>\n",
        "      <td>0.985000</td>\n",
        "      <td>0.984678</td>\n",
@@ -556,7 +556,7 @@
        "    <tr>\n",
        "      <td>11</td>\n",
        "      <td>3.787500</td>\n",
-       "      <td>4.224126</td>\n",
+       "      <td>4.224096</td>\n",
        "      <td>0.982759</td>\n",
        "      <td>0.985000</td>\n",
        "      <td>0.984678</td>\n",
@@ -564,7 +564,7 @@
        "    <tr>\n",
        "      <td>12</td>\n",
        "      <td>3.809900</td>\n",
-       "      <td>4.224823</td>\n",
+       "      <td>4.224817</td>\n",
        "      <td>0.982759</td>\n",
        "      <td>0.985000</td>\n",
        "      <td>0.984678</td>\n",
@@ -572,7 +572,7 @@
        "    <tr>\n",
        "      <td>13</td>\n",
        "      <td>3.781900</td>\n",
-       "      <td>4.224779</td>\n",
+       "      <td>4.224833</td>\n",
        "      <td>0.982759</td>\n",
        "      <td>0.985000</td>\n",
        "      <td>0.984678</td>\n",
@@ -580,7 +580,7 @@
        "    <tr>\n",
        "      <td>14</td>\n",
        "      <td>3.784200</td>\n",
-       "      <td>4.225880</td>\n",
+       "      <td>4.225881</td>\n",
        "      <td>0.982759</td>\n",
        "      <td>0.985000</td>\n",
        "      <td>0.984678</td>\n",
@@ -588,7 +588,7 @@
        "    <tr>\n",
        "      <td>15</td>\n",
        "      <td>3.780000</td>\n",
-       "      <td>4.226571</td>\n",
+       "      <td>4.226523</td>\n",
        "      <td>0.982759</td>\n",
        "      <td>0.985000</td>\n",
        "      <td>0.984678</td>\n",
@@ -596,7 +596,7 @@
        "    <tr>\n",
        "      <td>16</td>\n",
        "      <td>3.787400</td>\n",
-       "      <td>4.227510</td>\n",
+       "      <td>4.227547</td>\n",
        "      <td>0.982759</td>\n",
        "      <td>0.985000</td>\n",
        "      <td>0.984678</td>\n",
@@ -604,7 +604,7 @@
        "    <tr>\n",
        "      <td>17</td>\n",
        "      <td>3.778700</td>\n",
-       "      <td>4.228671</td>\n",
+       "      <td>4.228691</td>\n",
        "      <td>0.982759</td>\n",
        "      <td>0.985000</td>\n",
        "      <td>0.984678</td>\n",
@@ -612,7 +612,7 @@
        "    <tr>\n",
        "      <td>18</td>\n",
        "      <td>3.777100</td>\n",
-       "      <td>4.229467</td>\n",
+       "      <td>4.229496</td>\n",
        "      <td>0.982759</td>\n",
        "      <td>0.985000</td>\n",
        "      <td>0.984678</td>\n",
@@ -620,7 +620,7 @@
        "    <tr>\n",
        "      <td>19</td>\n",
        "      <td>3.776700</td>\n",
-       "      <td>4.229557</td>\n",
+       "      <td>4.229513</td>\n",
        "      <td>0.982759</td>\n",
        "      <td>0.985000</td>\n",
        "      <td>0.984678</td>\n",
@@ -628,7 +628,7 @@
        "    <tr>\n",
        "      <td>20</td>\n",
        "      <td>3.776200</td>\n",
-       "      <td>4.229523</td>\n",
+       "      <td>4.229564</td>\n",
        "      <td>0.982759</td>\n",
        "      <td>0.985000</td>\n",
        "      <td>0.984678</td>\n",
@@ -651,10 +651,10 @@
       "  epoch                    =       20.0\n",
       "  total_flos               =        0GF\n",
       "  train_loss               =     4.1634\n",
-      "  train_runtime            = 0:01:03.99\n",
+      "  train_runtime            = 0:01:05.49\n",
       "  train_samples            =        300\n",
-      "  train_samples_per_second =     93.752\n",
-      "  train_steps_per_second   =      1.563\n"
+      "  train_samples_per_second =      91.61\n",
+      "  train_steps_per_second   =      1.527\n"
      ]
     }
    ],
@@ -701,12 +701,12 @@
       "  epoch                   =       20.0\n",
       "  eval_accuracy           =      0.985\n",
       "  eval_f1                 =     0.9847\n",
-      "  eval_loss               =     4.2295\n",
+      "  eval_loss               =     4.2296\n",
       "  eval_precision          =     0.9828\n",
       "  eval_runtime            = 0:00:01.04\n",
       "  eval_samples            =        200\n",
-      "  eval_samples_per_second =    192.102\n",
-      "  eval_steps_per_second   =      3.842\n"
+      "  eval_samples_per_second =    191.977\n",
+      "  eval_steps_per_second   =       3.84\n"
      ]
     }
    ],
@@ -742,7 +742,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = trainer.tokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['SPECIAL_TOKENS_ATTRIBUTES',\n",
+       " '__annotations__',\n",
+       " '__call__',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " '_add_tokens',\n",
+       " '_additional_special_tokens',\n",
+       " '_auto_class',\n",
+       " '_batch_encode_plus',\n",
+       " '_bos_token',\n",
+       " '_call_one',\n",
+       " '_cls_token',\n",
+       " '_compile_jinja_template',\n",
+       " '_convert_encoding',\n",
+       " '_convert_id_to_token',\n",
+       " '_convert_token_to_id_with_added_voc',\n",
+       " '_create_repo',\n",
+       " '_decode',\n",
+       " '_decode_use_source_tokenizer',\n",
+       " '_encode_plus',\n",
+       " '_eos_token',\n",
+       " '_eventual_warn_about_too_long_sequence',\n",
+       " '_eventually_correct_t5_max_length',\n",
+       " '_from_pretrained',\n",
+       " '_get_files_timestamps',\n",
+       " '_get_padding_truncation_strategies',\n",
+       " '_in_target_context_manager',\n",
+       " '_mask_token',\n",
+       " '_pad',\n",
+       " '_pad_token',\n",
+       " '_pad_token_type_id',\n",
+       " '_processor_class',\n",
+       " '_save_pretrained',\n",
+       " '_sep_token',\n",
+       " '_set_processor_class',\n",
+       " '_switch_to_input_mode',\n",
+       " '_switch_to_target_mode',\n",
+       " '_tokenizer',\n",
+       " '_unk_token',\n",
+       " '_upload_modified_files',\n",
+       " 'add_special_tokens',\n",
+       " 'add_tokens',\n",
+       " 'added_tokens_decoder',\n",
+       " 'added_tokens_encoder',\n",
+       " 'additional_special_tokens',\n",
+       " 'additional_special_tokens_ids',\n",
+       " 'all_special_ids',\n",
+       " 'all_special_tokens',\n",
+       " 'all_special_tokens_extended',\n",
+       " 'apply_chat_template',\n",
+       " 'as_target_tokenizer',\n",
+       " 'backend_tokenizer',\n",
+       " 'batch_decode',\n",
+       " 'batch_encode_plus',\n",
+       " 'bos_token',\n",
+       " 'bos_token_id',\n",
+       " 'build_inputs_with_special_tokens',\n",
+       " 'can_save_slow_tokenizer',\n",
+       " 'chat_template',\n",
+       " 'clean_up_tokenization',\n",
+       " 'clean_up_tokenization_spaces',\n",
+       " 'cls_token',\n",
+       " 'cls_token_id',\n",
+       " 'convert_added_tokens',\n",
+       " 'convert_ids_to_tokens',\n",
+       " 'convert_tokens_to_ids',\n",
+       " 'convert_tokens_to_string',\n",
+       " 'create_token_type_ids_from_sequences',\n",
+       " 'decode',\n",
+       " 'decoder',\n",
+       " 'default_chat_template',\n",
+       " 'deprecation_warnings',\n",
+       " 'do_lower_case',\n",
+       " 'encode',\n",
+       " 'encode_plus',\n",
+       " 'eos_token',\n",
+       " 'eos_token_id',\n",
+       " 'from_pretrained',\n",
+       " 'get_added_vocab',\n",
+       " 'get_special_tokens_mask',\n",
+       " 'get_vocab',\n",
+       " 'init_inputs',\n",
+       " 'init_kwargs',\n",
+       " 'is_fast',\n",
+       " 'mask_token',\n",
+       " 'mask_token_id',\n",
+       " 'max_len_sentences_pair',\n",
+       " 'max_len_single_sentence',\n",
+       " 'model_input_names',\n",
+       " 'model_max_length',\n",
+       " 'name_or_path',\n",
+       " 'num_special_tokens_to_add',\n",
+       " 'pad',\n",
+       " 'pad_token',\n",
+       " 'pad_token_id',\n",
+       " 'pad_token_type_id',\n",
+       " 'padding_side',\n",
+       " 'prepare_for_model',\n",
+       " 'prepare_seq2seq_batch',\n",
+       " 'pretrained_vocab_files_map',\n",
+       " 'push_to_hub',\n",
+       " 'register_for_auto_class',\n",
+       " 'sanitize_special_tokens',\n",
+       " 'save_pretrained',\n",
+       " 'save_vocabulary',\n",
+       " 'sep_token',\n",
+       " 'sep_token_id',\n",
+       " 'set_truncation_and_padding',\n",
+       " 'slow_tokenizer_class',\n",
+       " 'special_tokens_map',\n",
+       " 'special_tokens_map_extended',\n",
+       " 'split_special_tokens',\n",
+       " 'tokenize',\n",
+       " 'train_new_from_iterator',\n",
+       " 'truncate_sequences',\n",
+       " 'truncation_side',\n",
+       " 'unk_token',\n",
+       " 'unk_token_id',\n",
+       " 'verbose',\n",
+       " 'vocab',\n",
+       " 'vocab_files_names',\n",
+       " 'vocab_size']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -755,9 +930,9 @@
       "  eval_f1                 =     0.9819\n",
       "  eval_loss               =     4.3387\n",
       "  eval_precision          =     0.9802\n",
-      "  eval_runtime            = 0:00:06.81\n",
-      "  eval_samples_per_second =    220.039\n",
-      "  eval_steps_per_second   =      3.521\n",
+      "  eval_runtime            = 0:00:07.06\n",
+      "  eval_samples_per_second =    212.386\n",
+      "  eval_steps_per_second   =      3.398\n",
       "  test_samples            =       1500\n"
      ]
     }
