cleaning up cleaners

--- a/src/Preprocessing/cleaners/synopses_cleaner.ipynb
+++ b/src/Preprocessing/cleaners/synopses_cleaner.ipynb
@@ -9,39 +9,39 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 1,
             "metadata": {},
             "outputs": [
                 {
                     "data": {
                         "text/plain": [
-                            "['../../../data/synopses/Amphibians/Amphibian.pdf',\n",
-                            " '../../../data/synopses/Animals Ex-Situ/Management of Captive Animals.pdf',\n",
-                            " '../../../data/synopses/Bats/Bat.pdf',\n",
-                            " '../../../data/synopses/Birds/Bird.pdf',\n",
-                            " '../../../data/synopses/Farmland/Farmland.pdf',\n",
-                            " '../../../data/synopses/Farmland/Mediterranean Farmland.pdf',\n",
-                            " '../../../data/synopses/Farmland/Soil Fertility.pdf',\n",
-                            " '../../../data/synopses/Farmland/Sustainable Farming.pdf',\n",
-                            " '../../../data/synopses/Fish/Marine Fish.pdf',\n",
-                            " '../../../data/synopses/Forests/Forest.pdf',\n",
-                            " '../../../data/synopses/Grassland/Grassland.pdf',\n",
-                            " '../../../data/synopses/Insects/Bee.pdf',\n",
-                            " '../../../data/synopses/Insects/Butterfly and Moth.pdf',\n",
+                            "['../../../data/synopses/Marine Invertebrates/Subtidal Benthic Invertebrate.pdf',\n",
                             " '../../../data/synopses/Invasive Fish/Invasive Freshwater Species.pdf',\n",
+                            " '../../../data/synopses/Grassland/Grassland.pdf',\n",
                             " '../../../data/synopses/Mammals/Primate.pdf',\n",
                             " '../../../data/synopses/Mammals/Terrestrial Mammal.pdf',\n",
+                            " '../../../data/synopses/Amphibians/Amphibian.pdf',\n",
+                            " '../../../data/synopses/Insects/Butterfly and Moth.pdf',\n",
+                            " '../../../data/synopses/Insects/Bee.pdf',\n",
+                            " '../../../data/synopses/Bats/Bat.pdf',\n",
+                            " '../../../data/synopses/Farmland/Sustainable Farming.pdf',\n",
+                            " '../../../data/synopses/Farmland/Mediterranean Farmland.pdf',\n",
+                            " '../../../data/synopses/Farmland/Soil Fertility.pdf',\n",
+                            " '../../../data/synopses/Farmland/Farmland.pdf',\n",
+                            " '../../../data/synopses/Animals Ex-Situ/Management of Captive Animals.pdf',\n",
+                            " '../../../data/synopses/Fish/Marine Fish.pdf',\n",
+                            " '../../../data/synopses/Forests/Forest.pdf',\n",
+                            " '../../../data/synopses/Birds/Bird.pdf',\n",
                             " '../../../data/synopses/Marine/Biodiversity of Marine Artificial Structures.pdf',\n",
                             " '../../../data/synopses/Marine/Sustainable Aquaculture.pdf',\n",
-                            " '../../../data/synopses/Marine Invertebrates/Subtidal Benthic Invertebrate.pdf',\n",
-                            " '../../../data/synopses/Pests/Natural Pest Control.pdf',\n",
-                            " '../../../data/synopses/Reptiles/Reptile.pdf',\n",
-                            " '../../../data/synopses/Shrubland/Shrubland and Heathland.pdf',\n",
                             " '../../../data/synopses/Wetlands/Marsh and Swamp.pdf',\n",
-                            " '../../../data/synopses/Wetlands/Peatland.pdf']"
+                            " '../../../data/synopses/Wetlands/Peatland.pdf',\n",
+                            " '../../../data/synopses/Shrubland/Shrubland and Heathland.pdf',\n",
+                            " '../../../data/synopses/Pests/Natural Pest Control.pdf',\n",
+                            " '../../../data/synopses/Reptiles/Reptile.pdf']"
                         ]
                     },
-                    "execution_count": 5,
+                    "execution_count": 1,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -66,7 +66,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": 2,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -85,11 +85,9 @@
                 "        \"publisher\": \"Conservation Evidence\",\n",
                 "        \"date\": None,\n",
                 "        \"doi\": None,\n",
-                "        \"class\": max(\n",
-                "            set(result[\"classes\"]), key=result[\"classes\"].count, default=None\n",
-                "        ),\n",
+                "        \"class\":result['class'],\n",
                 "        \"abstract\": None,\n",
-                "        \"url\": 'PDF-PLACEHOLDER',\n",
+                "        \"url\": 'https://www.conservationevidence.com/synopsis/index',\n",
                 "        \"text\": result[\"text\"],\n",
                 "    }\n",
                 "    return json"
@@ -97,7 +95,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 3,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -118,7 +116,7 @@
                 "    if title is None:\n",
                 "        title = pdf_path.split(\"/\")[-1].split(\".\")[0]\n",
                 "\n",
-                "    folder = pdf_path.split(\"/\")[2]\n",
+                "    folder = pdf_path.split(\"synopses/\")[1].split('/')[0]\n",
                 "\n",
                 "    pdf.close()\n",
                 "    return populate_json({\n",
@@ -126,19 +124,19 @@
                 "        \"year\": year,\n",
                 "        \"title\": title,\n",
                 "        \"text\": text,\n",
-                "        \"classes\": [folder],\n",
+                "        \"class\": folder,\n",
                 "    })"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": 4,
             "metadata": {},
             "outputs": [
                 {
                     "data": {
                         "application/vnd.jupyter.widget-view+json": {
-                            "model_id": "de690851d9a64f9fa8d511f004232f9a",
+                            "model_id": "c23f516c92f44a02be740c9fcba9b6e3",
                             "version_major": 2,
                             "version_minor": 0
                         },
@@ -159,9 +157,80 @@
                 "    with open(f'../../../data/labelled/synopses/{i} - {record[\"title\"]}.json', 'w') as f:\n",
                 "        json.dump(record, f)\n",
                 "\n",
+                "records = []\n",
                 "for i,filepath in enumerate(tqdm(filepaths)):\n",
                 "    record = parse_pdf(filepath)\n",
-                "    write_json(i,record)\n"
+                "    # write_json(i,record)\n",
+                "\n",
+                "    records.append(record)\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 6,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Marine Invertebrates\n",
+                        "Invasive Fish\n",
+                        "Grassland\n",
+                        "Mammals\n",
+                        "Mammals\n",
+                        "Amphibians\n",
+                        "Insects\n",
+                        "Insects\n",
+                        "Bats\n",
+                        "Farmland\n",
+                        "Farmland\n",
+                        "Farmland\n",
+                        "Farmland\n",
+                        "Animals Ex-Situ\n",
+                        "Fish\n",
+                        "Forests\n",
+                        "Birds\n",
+                        "Marine\n",
+                        "Marine\n",
+                        "Wetlands\n",
+                        "Wetlands\n",
+                        "Shrubland\n",
+                        "Pests\n",
+                        "Reptiles\n"
+                    ]
+                },
+                {
+                    "data": {
+                        "text/plain": [
+                            "['Fish',\n",
+                            " 'Farmland',\n",
+                            " 'Forests',\n",
+                            " 'Birds',\n",
+                            " 'Bats',\n",
+                            " 'Pests',\n",
+                            " 'Animals Ex-Situ',\n",
+                            " 'Marine',\n",
+                            " 'Shrubland',\n",
+                            " 'Grassland',\n",
+                            " 'Reptiles',\n",
+                            " 'Amphibians',\n",
+                            " 'Insects',\n",
+                            " 'Wetlands',\n",
+                            " 'Invasive Fish',\n",
+                            " 'Marine Invertebrates',\n",
+                            " 'Mammals']"
+                        ]
+                    },
+                    "execution_count": 6,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "# get list of record classes\n",
+                "print('\\n'.join([record['class'] for record in records]))\n",
+                "list(set([record['class'] for record in records]))"
             ]
         }
     ],
@@ -181,7 +250,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.11.3"
+            "version": "3.10.12"
         }
     },
     "nbformat": 4,
